# Lily

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO
LilyApplication/src/: ComponentEditorWindow.cpp  ComponentEditorWindow.h  EditorWindow.cpp  EditorWindow.h  LauncherData.h  LilyEditor.cpp  LilyEditor.h  LilyEditorLayer.cpp  LilyEditorLayer.h  LilyFileExplorer.cpp  LilyFileExplorer.h  LilyLauncher.cpp  LilyLauncher.h  RendererSettingsWindow.cpp  RendererSettingsWindow.h  SceneListWindow.cpp  SceneListWindow.h  main.cpp
LilyEngine/include/: Lily.h
LilyEngine/include/Application/: Application.h  Clock.h  EventSender.h  LilyEventSender.h  Window.h
LilyEngine/include/Entity/: Component.h  Components.h  ECRegistry.h  EC_registry.h  Family.h  Importer.h  Lobject.h  Pool.h  Scene.h  SceneSerializer.h  Transform.h  UObject.h
LilyEngine/include/Gui/: Gui.h  GuiLayer.h
LilyEngine/include/Renderer/: Camera.h  DirectionalLight.h  Framebuffer.h  GraphicsHeaders.h  Graphics_headers.h  Importer.h  Light.h  Material.h  Mesh.h  Renderer.h  Shader.h  stb_image.h
LilyEngine/shaders/: default.fs  light.fs  light.vs  outline.fs  outline.vs
LilyEngine/src/Application/: Application.cpp  Clock.cpp  EventSender.cpp  LilyEventSender.cpp  Window.cpp
LilyEngine/src/Entity/: ECRegistry.cpp  EC_registry.cpp  Lobject.cpp  Scene.cpp  SceneSerializer.cpp  UObject.cpp
LilyEngine/src/Gui/: Gui.cpp  GuiLayer.cpp
LilyEngine/src/Renderer/: Framebuffer.cpp  Importer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  camera.cpp
assets/: default.fs  default.vs  imgui.ini  red.fs
